1998-06-07  Alex Lancaster  <alex@santafe.edu>

	* config.ent: Removed.

	* src.ent:  Removed reference to config.ent.

1998-06-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* src.ent.in: Don't use extracted locations, as module entities
	now all reference public identifiers.

1998-06-05  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* src.ent.in: Add srcrevhistory.sgml.

	* refmeta.sgml: Replace REVHISTORY with srcrevhistory.sgml.

	* Makefile.am (SUBDIRS): Add tech.
	(swarm_ChangeLog): Add (empty).
	(GENERATED_SGML): Add srcrevhistory.sgml.

1998-06-03  Alex Lancaster  <alex@santafe.edu>

	* Makefile.am (CLEANFILES): Changed hardcoded refbook.rtf to
	$(NAME).rtf.
	Added Local variable mode for emacs makefile-mode.
	
1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (gridexamples.sgml): Remove unnecessary subshell for
	`for' loop and don't cd to $(srcdir) when done (it's in a
	subshell).

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* grid: Moved the grid subdir to the root of the Swarm application
	source tree and renamed to gridturtle.

	* Makefile.am (gridexamples.sgml): After changing directories into
	$(gridturtle_srcdir) - change directory back to $(srcdir) to
	restore location.

1998-06-01  Marcus G. Daniels  <mgd@mogollon.santafe.edu>

	* Makefile.am (swarm_srcdir, gridturtle_srcdir): New variables
	which get substituted assignments from configure.  Use them
	instead of $(SWARMHOME) and $(srcdir)/grid.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* grid-app.sgml: Fixed incorrect LINKENDS and descriptions for
	grid5.m and grid6.m.

1998-05-29  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* probes-app.sgml: Update LINKENDs per new ID conventions.

1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (refindex.sgml $(PAGES)): Add $(top_srcdir)/protocol.el
	and $(top_srcdir)/common.el as dependents.
	(refindex.sgml $(PAGES)): Set SWARMDOCS environment variable to
	the fully-resolved top_srcdir.
